// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AbbreviationLookup Utils highlightOptionLabel Should ignore space at the beginning and the end 1`] = `"SHORTABBR (Very long test name)"`;

exports[`AbbreviationLookup Utils highlightOptionLabel Should mark abbreviation because it shorter (bigger similarity) 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "children": [
      "",
      {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": {},
        "key": null,
        "props": {
          "children": "SHORT",
        },
        "type": "mark",
      },
      "ABBR (ShortNameForTemplate)",
    ],
  },
  "type": Symbol(react.fragment),
}
`;

exports[`AbbreviationLookup Utils highlightOptionLabel Should mark name because substring at the beginning 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "children": [
      "ASHORTABBR (",
      {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": {},
        "key": null,
        "props": {
          "children": "Short",
        },
        "type": "mark",
      },
      "NameForTemplate)",
    ],
  },
  "type": Symbol(react.fragment),
}
`;

exports[`AbbreviationLookup Utils highlightOptionLabel Should not highlight if lookup value length is short 1`] = `"SHORTABBR (Very long test name)"`;

exports[`AbbreviationLookup Utils highlightOptionLabel Should return marked abbreviation 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "children": [
      "SHORT",
      {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": {},
        "key": null,
        "props": {
          "children": "ABBR",
        },
        "type": "mark",
      },
      " (Very long test name)",
    ],
  },
  "type": Symbol(react.fragment),
}
`;

exports[`AbbreviationLookup Utils highlightOptionLabel Should return marked name 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "children": [
      "SHORTABBR (Very ",
      {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": {},
        "key": null,
        "props": {
          "children": "long",
        },
        "type": "mark",
      },
      " test name)",
    ],
  },
  "type": Symbol(react.fragment),
}
`;
